[project]
name = "endee"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "tree-sitter>=0.25.2",
    "tree-sitter-bash>=0.25.1",
    "tree-sitter-cpp>=0.23.4",
    "tree-sitter-java>=0.23.5",
    "tree-sitter-javascript>=0.25.0",
    "tree-sitter-python>=0.25.0",
    "tree-sitter-rust>=0.24.0",
]
