[project]
name = "endee-ingest"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "endee>=0.1.8",
    "python-dotenv>=1.2.1",
    "seedir>=0.5.1",
    "tree-sitter>=0.25.2",
    "tree-sitter-bash>=0.25.1",
    "tree-sitter-cpp>=0.23.4",
    "tree-sitter-go>=0.25.0",
    "tree-sitter-java>=0.23.5",
    "tree-sitter-javascript>=0.25.0",
    "tree-sitter-python>=0.25.0",
    "tree-sitter-rust>=0.24.0",
    "tree-sitter-zig>=1.1.2",
]
